<resources>
    <string name="app_name">HorseChallenge</string>
    <string name="title">Horse Challenge</string>
    <string name="level">Nivel</string>
    <string name="moves">Movimientos</string>
    <string name="time">Tiempo</string>
    <string name="lives">Vidas</string>
    <string name="options">Opciones</string>
    <string name="instructions">Mueve el caballo para llenar todas las celdas.</string>
    <string name="credits">Juego creado por Luis Parra</string>
    <string name="premium">Click aqui para remover anuncios, conseguir mas niveles y vidas ilimitadas.</string>
    <string name="premiumTitle">Consigue premium!!</string>
    <string name="premiumBenefit1">No más ads</string>
    <string name="premiumBenefit2">vidas ilimitadas</string>
    <string name="premiumBenefit3">Manten tu progreso</string>
    <string name="pay">POR SOLO $15 MEX </string>
    <string name="p1">Términos y condiciones</string>
    <string name="p2">¡Bienvenido a HorseChallenge Game!</string>
    <string name="p3">Estos términos y condiciones describen las reglas y regulaciones para el uso del sitio web de Arrap, ubicado en https://luisparra-portafolio.netlify.app/.</string>
    <string name="p4">Al acceder a este sitio web, asumimos que aceptas estos términos y condiciones. No continúes usando Luis Parra si no estás de acuerdo con todos los términos y condiciones establecidos en esta página.</string>
    <string name="p5">Cookies:</string>
    <string name="p6">El sitio web utiliza cookies para ayudar a personalizar tu experiencia en línea. Al acceder a Luis Parra, aceptaste utilizar las cookies necesarias.</string>
    <string name="p7">Una cookie es un archivo de texto que un servidor de páginas web coloca en tu disco duro. Las cookies no se pueden utilizar para ejecutar programas o enviar virus a tu computadora. Las cookies se te asignan de forma exclusiva y solo un servidor web en el dominio que emitió la cookie puede leerlas.</string>
    <string name="p8">Podemos utilizar cookies para recopilar, almacenar y rastrear información con fines estadísticos o de marketing para operar nuestro sitio web. Tienes la capacidad de aceptar o rechazar cookies opcionales. Hay algunas cookies obligatorias que son necesarias para el funcionamiento de nuestro sitio web. Estas cookies no requieren tu consentimiento ya que siempre funcionan. Ten en cuenta que al aceptar las cookies requeridas, también aceptas las cookies de terceros, que podrían usarse a través de servicios proporcionados por terceros si utilizas dichos servicios en nuestro sitio web, por ejemplo, una ventana de visualización de video proporcionada por terceros e integrada en nuestro sitio web.</string>
    <string name="p9">Licencia:</string>
    <string name="p10">A menos que se indique lo contrario, Arrap y/o sus licenciantes poseen los derechos de propiedad intelectual de todo el material en Luis Parra. Todos los derechos de propiedad intelectual son reservados.</string>
    <string name="p11">No debes:</string>
    <string name="p12">Copiar o volver a publicar material de Luis Parra</string>
    <string name="p13">Vender, alquilar o sublicenciar material de Luis Parra</string>
    <string name="p14">Reproducir, duplicar o copiar material de Luis Parra</string>
    <string name="p15">Redistribuir contenido de Luis Parra</string>
    <string name="p16">Este acuerdo comenzará el fecha presente.</string>
    <string name="p17">Partes de este sitio web ofrecen a los usuarios la oportunidad de publicar e intercambiar opiniones e información en determinadas áreas. Arrap no filtra, edita, publica ni revisa los comentarios antes de su presencia en el sitio web. Los comentarios no reflejan los puntos de vista ni las opiniones de Arrap, sus agentes y/o afiliados. Los comentarios reflejan los puntos de vista y las opiniones del individuo que publica sus puntos de vista y opiniones. En la medida en que lo permita la ley aplicable, Arrap no será responsable de los comentarios o de cualquier responsabilidad, daño o gasto causado y/o sufrido como resultado de cualquier uso y/o publicación y/o apariencia de los comentarios en este sitio web.</string>
    <string name="p18">Arrap se reserva el derecho de controlar todos los comentarios y eliminar cualquier comentario que pueda considerarse inapropiado, ofensivo o que incumpla estos términos y condiciones.</string>
    <string name="p19">Tú garantizas y representas que:</string>
    <string name="p20">Tienes derecho a publicar comentarios en nuestro sitio web y tienes todas las licencias y consentimientos necesarios para hacerlo</string>
    <string name="p21">Los comentarios no invaden ningún derecho de propiedad intelectual, incluidos, entre otros, los derechos de autor, patentes o marcas comerciales de terceros</string>
    <string name="p22">Los comentarios no contienen material difamatorio, calumnioso, ofensivo, indecente o ilegal que sea una invasión de la privacidad</string>
    <string name="p23">Los comentarios no se utilizarán para solicitar o promover actividades comerciales o adhesión política o religiosa</string>
    <string name="p24">Sin autorización expresa por escrito de Arrap, no se deben usar productos o servicios para enviar mensajes comerciales no solicitados o de marketing.</string>
    <string name="p25">Hipervínculos a nuestro contenido:</string>
    <string name="p26">Las siguientes organizaciones pueden vincularse a nuestro sitio web sin aprobación previa por escrito:</string>
    <string name="p27">Agencias gubernamentales;</string>
    <string name="p28">Motores de búsqueda;</string>
    <string name="p29">Organizaciones de noticias;</string>
    <string name="p30">Los distribuidores de directorios en línea pueden vincularse a nuestro sitio web de la misma manera que hacen hipervínculos a los sitios web de otras empresas que figuran en la lista; y</string>
    <string name="p31">Empresas acreditadas en todo el sistema, excepto que soliciten organizaciones sin fines de lucro, centros comerciales de caridad y grupos de recaudación de fondos de caridad que no pueden hacer hipervínculos a nuestro sitio web.</string>
    <string name="p32">Estas organizaciones pueden enlazar a nuestra página de inicio, a publicaciones o a otra información del sitio siempre que el enlace: (a) no sea engañoso de ninguna manera; (b) no implique falsamente patrocinio, respaldo o aprobación de la parte vinculante y sus productos y/o servicios; y (c) encaja en el contexto del sitio de la parte vinculante.</string>
    <string name="p33">Podemos considerar y aprobar otras solicitudes de enlaces de los siguientes tipos de organizaciones:</string>
    <string name="p34">fuentes de información de consumidores y/o empresas comúnmente conocidas;</string>
    <string name="p35">sitios de la comunidad .com;</string>
    <string name="p36">asociaciones u otros grupos que representan organizaciones benéficas;</string>
    <string name="p37">distribuidores de directorios en línea;</string>
    <string name="p38">portales de Internet;</string>
    <string name="p39">firmas de contabilidad, derecho y consultoría; y</string>
    <string name="p40">instituciones educativas y asociaciones comerciales.</string>
    <string name="p41">Aprobaremos las solicitudes de enlace de estas organizaciones si: (a) el enlace no nos haría vernos desfavorablemente a nosotros mismos ni a nuestras empresas acreditadas; (b) la organización no tiene registros negativos con nosotros; (c) el beneficio para nosotros de la visibilidad del hipervínculo compensa la ausencia de Arrap; y (d) el enlace está en el contexto de información general de recursos.</string>
    <string name="p42">Estas organizaciones pueden enlazar a nuestra página de inicio siempre que el enlace: (a) no sea engañoso de ninguna manera; (b) no implique falsamente patrocinio, respaldo o aprobación de la parte vinculante y sus productos o servicios; y (c) encaja en el contexto del sitio de la parte vinculante.</string>
    <string name="p43">Si eres una de las organizaciones enumeradas en el párrafo 2 y estás interesada en vincularte a nuestro sitio web, debes informarnos enviando un correo electrónico a Arrap. Incluye tu nombre, el nombre de tu organización, la información de contacto, así como la URL de tu sitio, una lista de las URL desde las que tienes la intención de vincular a nuestro sitio web y una lista de las URL de nuestro sitio a las que te gustaría acceder. Espera 2-3 semanas para recibir una respuesta.</string>
    <string name="p44">Las organizaciones aprobadas pueden hacer hipervínculos a nuestro sitio web de la siguiente manera:</string>
    <string name="p45">Mediante el uso de nuestro nombre corporativo; o</string>
    <string name="p46">Mediante el uso del localizador uniforme de recursos al que se está vinculando; o</string>
    <string name="p47">Usar cualquier otra descripción de nuestro sitio web al que está vinculado que tenga sentido dentro del contexto y formato del contenido en el sitio de la parte vinculante.</string>
    <string name="p48">No se permitirá el uso del logotipo de Arrap u otro material gráfico para vincular sin un acuerdo de licencia de marca comercial.</string>
    <string name="p49">Responsabilidad del contenido:</string>
    <string name="p50">No seremos responsables de ningún contenido que aparezca en tu sitio web. Aceptas protegernos y defendernos contra todas las reclamaciones que se presenten en tu sitio web. Ningún enlace(s) debe aparecer en ningún sitio web que pueda interpretarse como difamatorio, obsceno o criminal, o que infrinja, de otra manera viole o defienda la infracción u otra violación de los derechos de terceros.</string>
    <string name="p51">Reserva de derechos:</string>
    <string name="p52">Nos reservamos el derecho de solicitar que elimines todos los enlaces o cualquier enlace en particular a nuestro sitio web. Apruebas eliminar de inmediato todos los enlaces a nuestro sitio web cuando se solicite. También nos reservamos el derecho de modificar estos términos y condiciones y su política de enlaces en cualquier momento. Al vincular continuamente a nuestro sitio web, aceptas estar vinculado y seguir estos términos y condiciones de vinculación.</string>
    <string name="p53">Eliminación de enlaces de nuestro sitio web:</string>
    <string name="p54">Si encuentras algún enlace en nuestro sitio que sea ofensivo por cualquier motivo, puedes contactarnos e informarnos en cualquier momento. Consideraremos las solicitudes para eliminar enlaces, pero no estamos obligados a hacerlo ni a responder directamente.</string>
    <string name="p55">No nos aseguramos de que la información de este sitio web sea correcta. No garantizamos su integridad o precisión, ni prometemos asegurarnos de que el sitio web permanezca disponible o que el material en el sitio se mantenga actualizado.</string>
    <string name="p56">Exención de responsabilidad:</string>
    <string name="p57">En la medida máxima permitida por la ley aplicable, excluimos todas las representaciones, garantías y condiciones relacionadas con nuestro sitio web y el uso de este. Nada en este descargo de responsabilidad:</string>
    <string name="p58">limitará o excluirá nuestra responsabilidad o la tuya por muerte o lesiones personales;</string>
    <string name="p59">limitará o excluirá nuestra responsabilidad o la tuya por fraude o tergiversación fraudulenta;</string>
    <string name="p60">limitará cualquiera de nuestras responsabilidades o las tuyas de cualquier manera que no esté permitida por la ley aplicable; o</string>
    <string name="p61">excluirá cualquiera de nuestras responsabilidades o las tuyas que no puedan estar excluidas según la ley aplicable.</string>
</resources>