<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity"
    android:orientation="vertical"
    android:id="@+id/lyMain"
    android:background="#035B75"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/premiumTitle"
        android:textAlignment="center"
        android:textColor="@color/app_color_light"
        android:layout_marginTop="70dp"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/benefit1"
            />
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth_regular"
            android:textSize="25sp"
            android:text="@string/premiumBenefit1"
            android:layout_gravity="center_vertical"
            android:textColor="@color/app_color_light"
            android:layout_marginLeft="20dp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/benefit2"
            />
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth_regular"
            android:textSize="25sp"
            android:text="@string/premiumBenefit2"
            android:layout_gravity="center_vertical"
            android:textColor="@color/app_color_light"
            android:layout_marginLeft="20dp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/benefit3"
            />
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth_regular"
            android:textSize="25sp"
            android:text="@string/premiumBenefit3"
            android:layout_gravity="center_vertical"
            android:textColor="@color/app_color_light"
            android:layout_marginLeft="20dp"
            />


    </LinearLayout>

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pay_button"
     android:text="@string/pay"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        android:textColor="@color/app_color_dark"
        android:background="@color/previous_cell"

        />


</LinearLayout>